--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -7,9 +7,11 @@
         >
           <Auk::Toolbar as |Toolbar|>
             <Toolbar.Group @position="left" as |Group|>
-              <h4 class="auk-toolbar__title">
-                {{t "minutes"}}
-              </h4>
+              <Group.Item>
+                <h4 class="auk-toolbar__title">
+                  {{t "minutes"}}
+                </h4>
+              </Group.Item>
             </Toolbar.Group>
             <Toolbar.Group @position="right" as |Group|>
               {{#if this.mayEditMinutes}}
