--- a/app/templates/cases/case/subcases/subcase/index.hbs
+++ b/app/templates/cases/case/subcases/subcase/index.hbs
@@ -1,4 +1,4 @@
-<div class="auk-scroll-wrapper__body" id="subcases-container">
+<div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
     <div id="case" class="auk-u-mb-8">
       <Subcase::SubcaseDescriptionPanel @subcase={{@model.subcase}} />
