--- a/app/components/subcase/subcase-versions-panel.hbs
+++ b/app/components/subcase/subcase-versions-panel.hbs
@@ -1,5 +1,5 @@
 <div {{did-update (perform this.loadAgendaData)}} id="agenda" class="auk-u-mb-8">
-  <Auk::Panel>
+  <Auk::Panel data-test-subcase-versions-panel>
     <Auk::Panel::Header>
       <Auk::Toolbar>
         <Auk::Toolbar::Group @position="left">
