KAS-4577 Fix 'link-rel-noopener' linting errors

--- a/app/components/vp/submissions-alert.hbs
+++ b/app/components/vp/submissions-alert.hbs
@@ -22,7 +22,7 @@
       </FormatList>
       {{#if @parliamentFlow.isBeingHandledByFP}}
         {{ this.parliamentLinkMessage }}
-        <a href="{{this.parliamentLink}}" target="_blank">{{ t "flemish-parliament" }}</a>.
+        <a href="{{this.parliamentLink}}" target="_blank" rel="noopener noreferrer">{{ t "flemish-parliament" }}</a>.
       {{/if}}
     </p>
   </AuAlert>
