--- a/app/components/utils/th-sortable.hbs
+++ b/app/components/utils/th-sortable.hbs
@@ -1,4 +1,4 @@
-<th class="auk-u-text-nowrap" role="columnheader" aria-sort="none" ...attributes >
+<th class="auk-u-text-nowrap" aria-sort="none" ...attributes >
   <button class="auk-table-sorter" type="button" onclick={{this.changeSort}}>
     <div class="auk-table-sorter__label {{if this.isSorted "auk-u-text-bold"}}">{{@label}}</div>
     {{#if this.isDescendingOrder}}
