--- a/app/components/k-data-table/table.hbs
+++ b/app/components/k-data-table/table.hbs
@@ -32,7 +32,7 @@
     {{else}}
       <tr>
         <td colspan="100%">
-          {{yield to="no-data"}}
+          {{yield to="noData"}}
         </td>
       </tr>
     {{/if}}
