--- a/app/templates/agendas.hbs
+++ b/app/templates/agendas.hbs
@@ -110,8 +110,8 @@
               </tr>
             {{else}}
               {{#each @model as |agenda|}}
+                {{! template-lint-disable no-invalid-interactive }}
                 <tr
-                  role="button"
                   class="auk-u-text-align--center auk-table--clickable-rows"
                   {{on "click" (fn this.onClickRow agenda)}}
                 >
@@ -171,6 +171,7 @@
                     </AuLink>
                   </td>
                 </tr>
+                {{! template-lint-enable no-invalid-interactive }}
               {{/each}}
             {{/if}}
           </tbody>
