--- a/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
@@ -41,6 +41,7 @@
           data-test-subcase-description-edit-confidential
           id="subcase-confidential"
           @checked={{@subcase.confidential}}
+          @onChange={{set this "confidentialChanged" true}}
         />
       </AuFormRow>
       <AuFormRow>
@@ -79,7 +80,6 @@
       </AuFormRow>
       <AuFormRow>
         <Auk::Label>{{t "subcase-name"}}</Auk::Label>
-        {{! TODO KAS-4529 modelSelector + edit field like new subcase form?}}
         <AuInput
           data-test-subcase-description-edit-procedure-name
           @width="block"
@@ -94,7 +94,7 @@
         <Auk::Toolbar::Item>
           <AuButton
             @skin="naked"
-            {{on "click" @onCancel}}
+            {{on "click" this.cancelEditing}}
           >
             {{t "cancel"}}
           </AuButton>
