--- a/app/components/subcase/detail/regular.hbs
+++ b/app/components/subcase/detail/regular.hbs
@@ -29,6 +29,7 @@
       @governmentAreas={{@subcase.governmentAreas}}
       @allowEditing={{user-may "manage-cases"}}
       @onSave={{@saveGovernmentAreas}}
+      @subcase={{@subcase}}
       class="auk-u-mb-4"
     />
     <div id="documents" class="auk-u-mb-4">
