fix argument name

--- a/app/templates/cases/case/subcases/subcase/index.hbs
+++ b/app/templates/cases/case/subcases/subcase/index.hbs
@@ -17,7 +17,7 @@
     @savePieces={{this.savePieces}}
     @cancelUploadPieces={{this.cancelUploadPieces}}
     @newPieces={{this.newPieces}}
-    @uploadPieces={{this.uploadPieces}}
+    @uploadPiece={{this.uploadPiece}}
     @deletePiece={{this.deletePiece}}
   />
 </div>
