--- a/app/components/subcases/side-nav/subcase.hbs
+++ b/app/components/subcases/side-nav/subcase.hbs
@@ -1,4 +1,4 @@
-<li class="auk-sidebar__item auk-sidebar__item--styled {{if @selected "auk-sidebar__item--active"}}">
+<li class="auk-sidebar__item auk-sidebar__item--styled auk-sidebar__item--inside-link {{if @selected "auk-sidebar__item--active"}}">
   <LinkTo 
     @route="cases.case.subcases.subcase"
     @model={{@subcase.id}}
