--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -582,6 +582,10 @@ $au-label-color: var(--au-gray-700);
     margin-top: 0;
   }
 
+  .list-style-none {
+    list-style-type: none;
+  }
+
   // Provides the general styling for the decimal-extended (multi-level) list type
   // NOTE: This is limited to a certain levels deep because otherwise the styling keep overriding each other (`[data-list-style='decimal-extended']` and the rest of the ol/ul selectors)
   @mixin decimal-extended-styling($levels, $current-level: 1) {
