KAS-4529 final cypress test fixes

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -155,7 +155,7 @@
               @agendaContext.agenda.previousVersion
             }}
           >
-            {{#unless this.loadAccessLevelRelatedData.isRunning}}
+            {{#unless (or this.loadPieceRelatedData.isRunning this.loadAccessLevelRelatedData.isRunning)}}
               <AccessLevelPill
                 @accessLevel={{this.piece.accessLevel}}
                 @isEditable={{@isEditable}}
