--- a/app/components/cases/cases-header.hbs
+++ b/app/components/cases/cases-header.hbs
@@ -9,7 +9,7 @@
     </Toolbar.Group>
     <Toolbar.Group @position="right" as |Group|>
       <Group.Item class="auk-o-flex">
-        {{#if @nameSearchText}}
+        {{#if this.filterText}}
           <AuButton
             data-test-cases-header-clear-filter
             @skin="naked"
@@ -24,7 +24,7 @@
           data-test-cases-header-filter-input
           @width="block"
           @icon="search"
-          value={{@nameSearchText}}
+          value={{this.filterText}}
           placeholder={{t "search-case-title"}}
           autocomplete="off"
           {{on "input" (perform this.debouncedSetFilter)}}
