KAS-4529 remove usage of translation

--- a/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
@@ -32,7 +32,7 @@
           @level="4"
           @skin="4"
         >
-          {{t "design-decreet-of" subcaseShortTitle=(capitalize @subcase.shortTitle)}}
+          {{capitalize @subcase.shortTitle}}
         </AuHeading>
         <div class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center">
           <AuPill
