--- a/app/components/subcase/bekrachtiging-description-panel/edit.hbs
+++ b/app/components/subcase/bekrachtiging-description-panel/edit.hbs
@@ -4,7 +4,7 @@
       <Auk::Toolbar::Group @position="left">
         <Auk::Toolbar::Item>
           <h4 class="auk-panel__title">
-            {{t "subcase"}}
+            {{t "ratification-overview"}}
           </h4>
         </Auk::Toolbar::Item>
       </Auk::Toolbar::Group>
@@ -13,18 +13,38 @@
   <Auk::Panel::Body>
     <div class="au-c-form">
       <AuFormRow>
+        <AuFieldset as |Fieldset|>
+          <Fieldset.legend>{{t "subcase-type"}}</Fieldset.legend>
+          <Fieldset.content>
+            <AuRadioGroup
+              @alignment="inline"
+              @selected={{this.agendaItemType}}
+              @onChange={{this.onChangeAgendaItemType}}
+              as |Group|
+            >
+              {{#each this.agendaItemTypes as |type|}}
+                <Group.Radio @value={{type}}>
+                  {{type.label}}
+                </Group.Radio>
+              {{/each}}
+            </AuRadioGroup>
+          </Fieldset.content>
+        </AuFieldset>
+      </AuFormRow>
+      <AuFormRow>
         <Auk::Label for="subcase-confidential">
           {{t "limited-access"}}</Auk::Label>
         <AuToggleSwitch
           id="subcase-confidential"
           @checked={{@subcase.confidential}}
+          @onChange={{set this "confidentialChanged" true}}
         />
       </AuFormRow>
       <AuFormRow>
-        <Auk::Label id="name-subcase">
+        <Auk::Label id="short-title-subcase">
           {{t "name-subcase"}}</Auk::Label>
         <Textarea
-          aria-labelledby="name-subcase"
+          aria-labelledby="short-title-subcase"
           rows="2"
           class="auk-textarea"
           @value={{@subcase.shortTitle}}
@@ -34,30 +54,12 @@
         <Auk::Label id="title-subcase">
           {{t "title-subcase"}}</Auk::Label>
         <Textarea
-          aria-labelledby="name-subcase"
+          aria-labelledby="title-subcase"
           rows="4"
           class="auk-textarea"
           @value={{@subcase.title}}
         />
       </AuFormRow>
-      <AuFieldset as |Fieldset|>
-        <Fieldset.legend>{{t "subcase-type"}}</Fieldset.legend>
-        <Fieldset.content>
-          <AuRadioGroup
-            data-test-subcase-description-edit-type
-            @alignment="inline"
-            @selected={{this.agendaItemType}}
-            @onChange={{this.onChangeAgendaItemType}}
-            as |Group|
-          >
-            {{#each this.agendaItemTypes as |type|}}
-              <Group.Radio @value={{type}}>
-                {{type.label}}
-              </Group.Radio>
-            {{/each}}
-          </AuRadioGroup>
-        </Fieldset.content>
-      </AuFieldset>
       <AuFormRow>
         <Auk::Label>{{t "subcase-type-dropdown"}}</Auk::Label>
         <Utils::ModelSelector
@@ -71,7 +73,10 @@
       </AuFormRow>
       <AuFormRow>
         <Auk::Label>{{t "subcase-name"}}</Auk::Label>
-        <AuInput @width="block" @value={{mut this.subcaseName}} />
+        <AuInput
+          @width="block"
+          @value={{mut this.subcaseName}}
+        />
       </AuFormRow>
     </div>
   </Auk::Panel::Body>
@@ -79,7 +84,10 @@
     <Auk::Toolbar @auto={{true}}>
       <Auk::Toolbar::Group @position="left">
         <Auk::Toolbar::Item>
-          <AuButton @skin="naked" {{on "click" @onCancel}}>
+          <AuButton
+            @skin="naked"
+            {{on "click" this.cancelEditing}}
+          >
             {{t "cancel"}}
           </AuButton>
         </Auk::Toolbar::Item>
@@ -87,7 +95,6 @@
       <Auk::Toolbar::Group @position="right">
         <Auk::Toolbar::Item>
           <AuButton
-            data-test-subcase-description-edit-save
             @skin="primary"
             @loading={{this.isSaving}}
             {{on "click" this.saveChanges}}
