add ratification tabs

--- a/app/templates/agenda/agendaitems/agendaitem.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem.hbs
@@ -33,6 +33,11 @@
           </Auk::Tab>
         {{/if}}
       {{/if}}
+      <Auk::Tab
+        @route="agenda.agendaitems.agendaitem.ratification"
+      >
+        Bekrachtiging
+      </Auk::Tab>
     </Auk::Tabs>
   </Auk::Navbar>
   <div class="auk-scroll-wrapper__body auk-scroll-wrapper__body--vertical">
