--- a/app/templates/signatures.hbs
+++ b/app/templates/signatures.hbs
@@ -27,6 +27,12 @@
           <Auk::Tab @route="signatures.ongoing-decisions-and-notes">
             {{t "decisions-and-notes-to-follow-up"}}
           </Auk::Tab>
+          <Auk::Tab @route="signatures.ratification">
+            Bekrachtigingen opstarten
+          </Auk::Tab>
+          <Auk::Tab @route="signatures.ongoing-ratification">
+            Bekrachtigingen opvolgen
+          </Auk::Tab>
         </Auk::Tabs>
       </Group.Item>
     </Toolbar.Group>
