--- a/app/components/agenda/agendaitem/agendaitem-ratification-panel.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-ratification-panel.hbs
@@ -65,13 +65,13 @@
               {{/if}}
             {{/each}}
           </div>
-          <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-tiny">
+          {{!-- <div class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-tiny">
             <AuRadio
               @name="submitter"
               @checked={{if (eq index 0) true}}
             />
             <Auk::Label for="first" class="au-u-padding-bottom-none">Opstarter</Auk::Label>
-          </div>
+          </div> --}}
         </Item>
       {{/each}}
     </AuList>
