KAS-4540 implement searching old mandatees to add on subcase form

--- a/app/components/mandatees/mandatee-selector/open-search.hbs
+++ b/app/components/mandatees/mandatee-selector/open-search.hbs
@@ -27,7 +27,7 @@
     @searchEnabled={{true}}
     @search={{perform this.searchMandatee}}
     @verticalPosition={{this.dropdownAlignment}}
-    @onChange={{@onSelectMandatee}}
+    @onChange={{this.onSelectMandatee}}
     as |mandatee|
   >
     <Mandatee::NameWithRange @mandatee={{mandatee}} />
