--- a/app/components/agenda/agendaitem/create-agendaitem.hbs
+++ b/app/components/agenda/agendaitem/create-agendaitem.hbs
@@ -23,13 +23,13 @@
               <Auk::Toolbar::Item class="auk-u-maximize-width">
                 <AuInput
                   data-test-create-agendaitem-input={{true}}
-                  @icon="search"
-                  @width="block"
-                  @value={{this.filter}}
-                  @disabled={{this.showPostponed}}
                   id="searchId"
                   placeholder={{t "search-placeholder"}}
-                  {{on "input" (perform this.searchTask)}}
+                  value={{this.filter}}
+                  @icon="search"
+                  @width="block"
+                  @disabled={{this.showPostponed}}
+                  {{on "input" this.onInputFilter}}
                 />
               </Auk::Toolbar::Item>
             </Auk::Toolbar::Group>
