--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -333,7 +333,11 @@
   <:body>
     {{#if this.newPiece}}
       <Auk::Label>{{t "name"}}</Auk::Label>
-      <AuInput @width="block" @value={{this.newPiece.name}} />
+      <AuInput
+        value={{this.newPiece.name}}
+        @width="block"
+        {{on "input" (pick "target.value" (set this "newPiece.name"))}}
+      />
       <Documents::UploadedDocument
         @piece={{this.newPiece}}
         @onDelete={{perform this.deleteUploadedPiece}}
