--- a/app/components/publications/publication/proofs/proof-upload-modal.hbs
+++ b/app/components/publications/publication/proofs/proof-upload-modal.hbs
@@ -39,8 +39,9 @@
           {{t "who-proof-reads"}}
         </Auk::Label>
         <AuInput
-          @value={{mut this.proofPrintCorrector}}
           id="proofPrintCorrector"
+          value={{this.proofPrintCorrector}}
+          {{on "input" (pick "target.value" (set this "proofPrintCorrector"))}}
         />
       </AuFormRow>
     </div>
