--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -100,9 +100,10 @@
       >
         <h4 class="auk-h4">{{t "annotation"}}</h4>
         <AuInput
-          @width="block"
-          @value={{mut this.editorValueAnnotatie}}
           id="decisionAnnotation"
+          value={{this.editorValueAnnotatie}}
+          @width="block"
+          {{on "input" (pick "target.value" (set this "editorValueAnnotatie"))}}
         />
 
         <h4 class="auk-h4 au-u-padding-top">{{t "concerns"}}</h4>
@@ -224,9 +225,10 @@
           {{#if (and this.isEditingAnnotation this.mayEditDecisionReport)}}
             <h4 class="auk-h4">{{t "annotation"}}</h4>
             <AuInput
-              @width="block"
-              @value={{mut this.editorValueAnnotatie}}
               id="decisionAnnotation"
+              value={{this.editorValueAnnotatie}}
+              @width="block"
+              {{on "input" (pick "target.value" (set this "editorValueAnnotatie"))}}
             />
             <Auk::Toolbar>
               <Auk::Toolbar::Group @position="left">
