--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -14,8 +14,9 @@
     {{#if (and @isEditingEnabled (not @row.hasSentSignFlow))}}
       <AuInput
         data-test-document-details-input
+        value={{@row.name}}
         @width="block"
-        @value={{mut @row.name}}
+        {{on "input" (pick "target.value" (set @row "name"))}}
       />
     {{else}}
       {{@row.name}}
