--- a/app/components/publications/new-publication-modal.hbs
+++ b/app/components/publications/new-publication-modal.hbs
@@ -34,8 +34,8 @@
           <div class="auk-u-mb">
             <AuInput
               data-test-new-publication-number
+              value={{this.number}}
               @type="number"
-              @value={{this.number}}
               @error={{not this.isPublicationNumberValid}}
               @disabled={{this.initPublicationNumber.isRunning}}
               {{on "input" (perform this.setPublicationNumber)}}
@@ -43,11 +43,11 @@
             />
             <AuInput
               data-test-new-publication-suffix
-              @value={{this.suffix}}
-              @error={{not this.isPublicationNumberValid}}
-              {{on "input" (perform this.setPublicationNumberSuffix)}}
               id="publicationSuffixInput"
               class="auk-input-group--w-xsmall" {{! TODO: replace `auk-input-group--w-xsmall` with matching @width argument when it is implemented }}
+              value={{this.suffix}}
+              @error={{not this.isPublicationNumberValid}}
+              {{on "input" (perform this.setPublicationNumberSuffix)}}
             />
             <Utils::Generic::TooltipHelp class="auk-u-mx">
               {{t "publication-flow-publication-number-help"}}
