--- a/app/components/publications/publication/proofs/proof-received-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-received-panel.hbs
@@ -86,8 +86,9 @@
           </Auk::Label>
           <AuInput
             data-test-proof-received-panel-edit-corrector
-            @value={{mut this.newProofPrintCorrector}}
             id="proofPrintCorrector"
+            value={{this.newProofPrintCorrector}}
+            {{on "input" (pick "target.value" (set this "newProofPrintCorrector"))}}
           />
         </AuFormRow>
       </div>
