--- a/app/components/publications/publication/proofs/proof-request-modal.hbs
+++ b/app/components/publications/publication/proofs/proof-request-modal.hbs
@@ -47,9 +47,10 @@
           </Auk::Label>
           <AuInput
             data-test-proof-request-subject
-            @width="block"
-            @value={{mut this.subject}}
             id="proofRequestSubject"
+            value={{this.subject}}
+            @width="block"
+            {{on "input" (pick "target.value" (set this "subject"))}}
           />
         </AuFormRow>
         <AuFormRow>
