--- a/app/components/publications/publication/publication-activities/publication-request-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-request-modal.hbs
@@ -46,9 +46,10 @@
           </Auk::Label>
           <AuInput
             data-test-publication-request-subject
-            @width="block"
-            @value={{mut this.subject}}
             id="publicationRequestModal_subject"
+            value={{this.subject}}
+            @width="block"
+            {{on "input" (pick "target.value" (set this "subject"))}}
           />
         </AuFormRow>
         <AuFormRow>
